fix(sy-datepicker): prevent proxied date hicups

--- a/app/components/sy-datepicker/template.hbs
+++ b/app/components/sy-datepicker/template.hbs
@@ -35,7 +35,7 @@
 
   <DropDown.Content @class="sy-datepicker">
     <SyCalendar
-      @center={{this.center}}
+      @center={{(moment this.center)}}
       @selected={{@value}}
       class="sy-datepicker"
       @onCenterChange={{this.updateCenter}}
