--- a/app/components/attendance-slider/template.hbs
+++ b/app/components/attendance-slider/template.hbs
@@ -1,15 +1,36 @@
-<RangeSlider @start={{this.start}} @step={{15}} @min={{0}} @max={{1440}} @connect={{true}} @animate={{true}} @behaviour="drag" @tooltips={{this.tooltips}} @on-slide={{action (mut this.values)}} @on-change={{action (perform this.save)}} />
+<div class="attendance-slider" ...attributes>
+  <RangeSlider
+    @start={{this.start}}
+    @step={{15}}
+    @min={{0}}
+    @max={{1440}}
+    @connect={{true}}
+    @animate={{true}}
+    @behaviour="drag"
+    @tooltips={{this.tooltips}}
+    @on-slide={{fn (mut this.values)}}
+    @on-change={{perform this.save}}
+  />
 
-<div class="slider-labels">
-  {{#each this.labels as |label|}}
-    <div style={{label.style}} class="slider-label slider-label--{{label.size}}">
-      <div class="slider-label-text">
-        {{label.value}}
+  <div class="slider-labels">
+    {{#each this.labels as |label|}}
+      <div
+        style={{label.style}}
+        class="slider-label slider-label--{{label.size}}"
+      >
+        <div class="slider-label-text">
+          {{label.value}}
+        </div>
       </div>
-    </div>
-  {{/each}}
-</div>
+    {{/each}}
+  </div>
 
-<div class="slider-title">
-  <span>{{this.duration}}</span> {{fa-icon 'trash' data-test-delete-attendance=true click=(perform this.delete)}}
+  <div class="slider-title">
+    <span>{{this.duration}}</span>
+    <FaIcon
+      @icon="trash"
+      data-test-delete-attendance="true"
+      {{on "click" (perform this.delete)}}
+    />
+  </div>
 </div>
