--- a/app/index/attendances/template.hbs
+++ b/app/index/attendances/template.hbs
@@ -1,38 +1,59 @@
 <div class="btn-toolbar btn-toolbar--right form-group">
-  <button type="button" class="btn btn-success" data-test-add-attendance {{action 'addAttendance'}}>Add attendance</button>
+  <button
+    type="button"
+    class="btn btn-success"
+    data-test-add-attendance
+    {{on "click" (route-action "addAttendance")}}
+  >Add attendance</button>
 </div>
 <div class="attendances">
   {{#if this.attendances}}
-    {{#if (or (media 'isXl') (media 'isLg') (media 'isMd'))}}
+    {{#if (or (media "isXl") (media "isLg") (media "isMd"))}}
       {{#each this.attendances as |attendance|}}
-        {{attendance-slider
-          data-test-attendance-slider=true
-          data-test-attendance-slider-id=attendance.id
-          attendance = (changeset attendance this.AttendanceValidator)
-          on-save    = (route-action 'saveAttendance')
-          on-delete  = (route-action 'deleteAttendance')
-        }}
+        <AttendanceSlider
+          data-test-attendance-slider
+          data-test-attendance-slider-id={{attendance.id}}
+          @attendance={{(changeset attendance this.AttendanceValidator)}}
+          @onSave={{(route-action "saveAttendance")}}
+          @onDelete={{(route-action "deleteAttendance")}}
+        />
       {{/each}}
     {{else}}
       <table class="table table--striped table--attendances">
         <tbody>
           {{#each this.attendances as |attendance|}}
-            {{#with (changeset attendance this.AttendanceValidator) as |model|}}
+            {{#let (changeset attendance this.AttendanceValidator) as |model|}}
               <tr
                 data-test-attendance-slider
-                data-test-attendance-slider-id={{attendance.id}}>
+                data-test-attendance-slider-id={{attendance.id}}
+              >
                 <td>
-                  {{sy-timepicker value=model.from onChange=(action (mut model.from))}}
+                  <SyTimepicker
+                    @value={{model.from}}
+                    @onChange={{fn (mut model.from)}}
+                  />
                 </td>
                 <td>
-                  {{sy-timepicker value=model.to onChange=(action (mut model.to))}}
+                  <SyTimepicker
+                    @value={{model.to}}
+                    @onChange={{fn (mut model.to)}}
+                  />
                 </td>
                 <td>
-                  <button type="button" class="btn btn-danger" {{action 'deleteAttendance' model}}>{{fa-icon 'trash'}}</button>
-                  <button type="submit" class="btn btn-primary" disabled={{not (and model.isDirty model.isValid)}} {{action 'saveAttendance' model}}>{{fa-icon 'save'}}</button>
+                  <button
+                    type="button"
+                    class="btn btn-danger"
+                    {{on "click" (route-action "deleteAttendance" model)}}
+                  ><FaIcon @icon="trash" /></button>
+                  <button
+                    type="submit"
+                    class="btn btn-primary"
+                    disabled={{not (and model.isDirty model.isValid)}}
+                    {{on "click" (route-action "saveAttendance" model)}}
+                  ><FaIcon @icon="save" /></button>
                 </td>
               </tr>
-            {{/with}}
+            {{/let}}
           {{/each}}
         </tbody>
       </table>
@@ -41,6 +62,6 @@
     <div class="text-center"><em>No attendances yet</em></div>
   {{/if}}
   <div class="text-center">
-    <br>
+    <br />
   </div>
 </div>
