--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -31,6 +31,7 @@
 @import "components/tracking-bar";
 @import "components/sy-calendar";
 @import "components/sy-datepicker";
+@import "components/attendance-slider";
 
 html {
   hyphens: auto;
