--- a/app/components/sy-durationpicker-day/template.hbs
+++ b/app/components/sy-durationpicker-day/template.hbs
@@ -1,6 +1,7 @@
 <input
+  ...attributes
   aria-label="day picker"
-  name="duration"
+  name="duration-day"
   type="text"
   class="form-control"
   pattern={{this.pattern}}
@@ -8,6 +9,7 @@
   maxlength={{this.maxlength}}
   placeholder={{this.placeholder}}
   autocomplete="off"
+  {{on "change" this.change}}
   {{on "keyup" this.handleKeyPress}}
   {{on "focusout" (optional @onFocusOut)}}
 />
