--- a/app/components/statistic-list/template.hbs
+++ b/app/components/statistic-list/template.hbs
@@ -5,11 +5,11 @@
 {{else if this.data.last.isError}}
   <div class="empty">
     <div>
-      {{fa-icon 'bolt'}}
+      {{fa-icon "bolt"}}
       <h3>Oops... Something went wrong</h3>
       <p>
         Have you tried turning it off and on again?
-        <br>
+        <br />
         Please try refreshing the page.
       </p>
     </div>
@@ -17,7 +17,7 @@
 {{else if this.missingParams}}
   <div class="empty">
     <div>
-      {{fa-icon 'search'}}
+      {{fa-icon "search"}}
       <h3>Missing filter parameters</h3>
       <p>{{this.missingParamsMessage}}</p>
     </div>
@@ -25,7 +25,7 @@
 {{else if (not this.data.last.value)}}
   <div class="empty">
     <div>
-      {{fa-icon 'bar-chart'}}
+      {{fa-icon "bar-chart"}}
       <h3>No statistics to display</h3>
       <p>Maybe try loosening your filters</p>
     </div>
@@ -36,7 +36,11 @@
       <tr>
         {{#each this.columns as |column|}}
           {{#if column.ordering}}
-            <SortHeader @current={{this.ordering}} @update={{action this.on-ordering-change}} @by={{column.ordering}}>
+            <SortHeader
+              @current={{this.ordering}}
+              @update={{action this.on-ordering-change}}
+              @by={{column.ordering}}
+            >
               {{column.title}}
             </SortHeader>
           {{else}}
@@ -46,13 +50,14 @@
         <th></th>
       </tr>
     </thead>
-    {{#vertical-collection
-      this.data.last.value
-      tagName           = 'tbody'
-      estimateHeight    = 40
-      bufferSize        = 10
-      containerSelector = '.page-content--scroll'
-    as |row|}}
+    <VerticalCollection
+      @items={{this.data.last.value}}
+      @tagName="tbody"
+      @estimateHeight={{40}}
+      @bufferSize={{10}}
+      @containerSelector=".page-content--scroll"
+      as |row|
+    >
       <tr>
         {{#each this.columns as |column|}}
           <StatisticList::Column
@@ -64,7 +69,7 @@
           <StatisticList::Bar @value={{(div row.duration this.maxDuration)}} />
         </td>
       </tr>
-    {{/vertical-collection}}
+    </VerticalCollection>
     <tfoot>
       <tr>
         {{#each this.columns as |column index|}}
@@ -72,8 +77,11 @@
             <strong>
               {{#if (not index)}}
                 Total:
-              {{else if (eq column.title 'Duration')}}
-                <span class="total">{{humanize-duration this.total false}}</span>
+              {{else if (eq column.title "Duration")}}
+                <span class="total">{{humanize-duration
+                    this.total
+                    false
+                  }}</span>
               {{/if}}
             </strong>
           </td>
