--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -32,6 +32,7 @@
 @import "components/sy-calendar";
 @import "components/sy-datepicker";
 @import "components/attendance-slider";
+@import "components/statistic-list-bar";
 
 html {
   hyphens: auto;
