--- a/app/components/filter-sidebar/template.hbs
+++ b/app/components/filter-sidebar/template.hbs
@@ -33,7 +33,7 @@
     >
       <span class="filter-sidebar-toggle-background"></span>
       <span class="filter-sidebar-toggle-icon">
-        {{fa-icon "sliders"}}
+        <FaIcon @icon="sliders" />
         {{#if @appliedCount}}
           <span
             class="filter-sidebar-toggle-icon-badge"
@@ -46,6 +46,7 @@
   <div
     class="filter-sidebar-overlay
       {{if this.visible 'filter-sidebar-overlay--visible'}}"
+    {{! template-lint-disable}}
     {{on "click" (fn (mut this.visible) false)}}
   ></div>
 {{/in-element}}
