--- a/app/index/template.hbs
+++ b/app/index/template.hbs
@@ -225,7 +225,7 @@
               {{/each}}
             </div>
           </f.input>
-          <f.input @name="dates" as |fi|>
+          <f.input @name="dates">
             <PowerCalendarMultiple
               class="calendar"
               @selected={{changeset.dates}}
