--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -33,6 +33,7 @@
 @import "components/sy-datepicker";
 @import "components/attendance-slider";
 @import "components/statistic-list-bar";
+@import "components/welcome-modal";
 
 html {
   hyphens: auto;
