--- a/app/components/sy-timepicker/template.hbs
+++ b/app/components/sy-timepicker/template.hbs
@@ -7,6 +7,7 @@
   maxlength={{this.maxlength}}
   placeholder={{this.placeholder}}
   autocomplete="off"
+  {{!template-lint-disable no-down-event-binding}}
   {{on "keydown" this.keyDown}}
   {{on "change" this.change}}
   {{on "focusout" (optional @onFocusOut)}}
