--- a/app/components/welcome-modal/template.hbs
+++ b/app/components/welcome-modal/template.hbs
@@ -1,8 +1,8 @@
 <SyModal @visible={{this.visible}} as |modal|>
   <modal.body>
-    <div class="text-center">
+    <div class="text-center welcome-modal-body">
       <h1>Welcome to Timed!</h1>
-      <img style="max-width:50%" src="/assets/logo.svg">
+      <img class="logo" src="/assets/logo.svg" alt="timed" />
       <h4>Would you like to take a tour?</h4>
     </div>
   </modal.body>
@@ -12,7 +12,8 @@
       type="button"
       class="btn btn-never"
       data-test-tour-never
-      {{action this.on-never}}>
+      {{action this.on-never}}
+    >
       Never
     </button>
 
@@ -20,7 +21,8 @@
       type="button"
       class="btn btn-default"
       data-test-tour-later
-      {{action this.on-later}}>
+      {{action this.on-later}}
+    >
       Later
     </button>
 
@@ -28,7 +30,8 @@
       type="submit"
       class="btn btn-primary"
       data-test-tour-start
-      {{action this.on-start}}>
+      {{action this.on-start}}
+    >
       Sure
     </button>
   </modal.footer>
