--- a/app/components/sy-topnav/template.hbs
+++ b/app/components/sy-topnav/template.hbs
@@ -1,9 +1,13 @@
 <header class="nav-top-header">
-  <button class="nav-toggle nav-top-toggle" type="button" {{action (toggle 'expand' this) on='click'}}>
+  <button
+    class="nav-toggle nav-top-toggle"
+    type="button"
+    {{action (toggle "expand" this) on="click"}}
+  >
     <span class="nav-toggle-icon"></span>
   </button>
   <LinkTo @route="index">
-    {{this.timed-clock}}
+    {{timed-clock}}
     <div class="nav-top-header-title">
       Timed
       <div class="nav-top-header-title-version">
@@ -16,24 +20,28 @@
   <ul class="nav-top-list">
     <li class="nav-top-list-item">
       <LinkTo @route="index">
-        {{fa-icon 'clock-o'}} Tracking
+        {{fa-icon "clock-o"}}
+        Tracking
       </LinkTo>
     </li>
     {{#unless this.navMobile}}
       {{#if (can "access page")}}
         <li class="nav-top-list-item">
           <LinkTo @route="analysis">
-            {{fa-icon 'line-chart'}} Analysis
+            {{fa-icon "line-chart"}}
+            Analysis
           </LinkTo>
         </li>
         <li class="nav-top-list-item">
           <LinkTo @route="statistics">
-            {{fa-icon 'bar-chart'}} Statistics
+            {{fa-icon "bar-chart"}}
+            Statistics
           </LinkTo>
         </li>
         <li class="nav-top-list-item">
           <LinkTo @route="projects">
-            {{fa-icon 'briefcase'}} Projects
+            {{fa-icon "briefcase"}}
+            Projects
           </LinkTo>
         </li>
       {{/if}}
@@ -41,7 +49,8 @@
     {{#if this.session.data.user.isSuperuser}}
       <li class="nav-top-list-item">
         <LinkTo @route="users.index">
-          {{fa-icon 'users'}} Users
+          {{fa-icon "users"}}
+          Users
         </LinkTo>
       </li>
     {{/if}}
@@ -50,12 +59,13 @@
     {{this.report-review-warning}}
     <li class="nav-top-list-item">
       <LinkTo @route="users.edit" @model={{this.session.data.user.id}}>
-        {{fa-icon 'user'}} {{this.session.data.user.fullName}}
+        {{fa-icon "user"}}
+        {{this.session.data.user.fullName}}
       </LinkTo>
     </li>
     <li class="nav-top-list-item">
       <a href="#" data-test-logout {{action (optional this.on-logout)}}>
-        {{fa-icon 'power-off'}}
+        {{fa-icon "power-off"}}
         Logout
       </a>
     </li>
