--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -29,11 +29,12 @@
 /* Component styles */
 @import "components/attendance-slider";
 @import "components/date-navigation";
+@import "components/nav-top";
+@import "components/tracking-bar";
 @import "components/sort-header";
 @import "components/statistic-list-bar";
 @import "components/sy-calendar";
 @import "components/sy-datepicker";
-@import "components/tracking-bar";
 @import "components/welcome-modal";
 
 html {
