fix(statistics): table sorting on header click

--- a/app/statistics/template.hbs
+++ b/app/statistics/template.hbs
@@ -214,7 +214,7 @@
         @type={{this.type}}
         @missingParams={{this.missingParams}}
         @ordering={{this.ordering}}
-        @on-ordering-change={{fn (mut this.ordering)}}
+        @onOrderingChange={{fn (mut this.ordering)}}
       />
     </div>
   </PagePermission>
