--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -41,6 +41,13 @@ html {
   hyphens: auto;
 }
 
+hr {
+  border: none;
+  width: 100%;
+  height: 7px;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.03), rgba(0, 0, 0, 0));
+}
+
 strong {
   font-weight: bold;
 }
