feat(remaining-effort): show status in progress-tooltip

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,7 +17,6 @@
 @import "filter-sidebar";
 @import "form-list";
 @import "loader";
-@import "progress-tooltip";
 @import "projects";
 @import "reports";
 @import "statistics";
@@ -35,6 +34,7 @@
 @import "components/statistic-list-bar";
 @import "components/sy-calendar";
 @import "components/sy-datepicker";
+@import "components/progress-tooltip";
 @import "components/welcome-modal";
 
 html {
