--- a/app/components/progress-tooltip/template.hbs
+++ b/app/components/progress-tooltip/template.hbs
@@ -7,30 +7,46 @@
     @offset="0 20px"
   >
     <div class="time-info">
-      <div class="time-info-durations">
-        <p>Spent (Total): {{humanize-duration this.spent}}</p>
-        <p>Spent (Billable): {{humanize-duration this.billable}}</p>
-        <p>Budget:
-          {{if this.estimated (humanize-duration this.estimated) "None"}}</p>
-      </div>
-      <div class="time-info-percentage">
+
+      <span>Spent (Total): {{humanize-duration this.spent}}</span>
+      <div class="progress-badge">
         {{#if this.progressTotal}}
-          <div class="time-info-percentage-total">
-            <span class="badge badge--{{this.colorTotal}}">
-              {{#if (gt this.progressTotal 1)}}{{fa-icon "warning"}} {{/if}}
-              {{round (mult 100 this.progressTotal)}}%
-            </span>
-          </div>
-        {{/if}}
-        {{#if this.progressBillable}}
-          <div class="time-info-percentage-billable">
-            <span class="badge badge--{{this.colorBillable}}">
-              {{#if (gt this.progressBillable 1)}}{{fa-icon "warning"}} {{/if}}
-              {{round (mult 100 this.progressBillable)}}%
-            </span>
-          </div>
+          <span class="badge badge--{{this.colorTotal}}">
+            {{#if (gt this.progressTotal 1)}}{{fa-icon "warning"}} {{/if}}
+            {{round (mult 100 this.progressTotal)}}%
+          </span>
         {{/if}}
       </div>
+
+      <span>Spent (Billable): {{humanize-duration this.billable}}</span>
+      <div class="progress-badge">
+        {{#if this.progressBillable}}
+          <span class="badge badge--{{this.colorBillable}}">
+            {{#if (gt this.progressBillable 1)}}{{fa-icon "warning"}} {{/if}}
+            {{round (mult 100 this.progressBillable)}}%
+          </span>
+        {{/if}}
+      </div>
+
+      <span>Budget:
+        {{if this.estimated (humanize-duration this.estimated) "None"}}</span>
+
+      {{#if this.remainingEffort}}
+        <span>{{concat
+            "Remaining effort: "
+            (humanize-duration this.remainingEffort)
+          }}</span>
+        <div class="progress-badge">
+          {{#if this.progressRemainingEffort}}
+            <span class="badge badge--{{this.colorRemainingEffort}}">
+              {{#if (gt this.progressRemainingEffort 1)}}{{fa-icon "warning"}}
+              {{/if}}
+              {{round (mult 100 this.progressRemainingEffort)}}%
+            </span>
+          {{/if}}
+        </div>
+      {{/if}}
+
     </div>
   </EmberTether>
 {{/if}}
