--- a/app/styles/components/progress-tooltip.scss
+++ b/app/styles/components/progress-tooltip.scss
@@ -1,52 +1,55 @@
 $progress-tooltip-arrow-size: 0.5rem;
-$progress-tooltip-color: rgb(87,87,87);
+$progress-tooltip-color: rgb(87, 87, 87);
 
 .progress-tooltip {
   z-index: 1000;
   background: $progress-tooltip-color;
-  box-shadow: 0 1px 5px rgba(23,23,23,0.5);
+  box-shadow: 0 1px 5px rgba(23, 23, 23, 0.5);
   max-width: initial;
-  color: rgb(255,255,255);
+  color: rgb(255, 255, 255);
   font-size: 0.9rem;
   padding: 0.3rem 0.5rem;
   border-radius: 0.3rem;
   animation: 200ms ease slide-in;
 
   .time-info {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto;
+    grid-column-gap: 0.5rem;
+    grid-row-gap: 0.25rem;
+    margin: 0.25rem;
 
-    .time-info-durations {
-      p {
-        white-space: nowrap;
-        margin: 0;
-
-        &:not(:last-of-type) {
-          padding-bottom: 0.4rem;
-        }
-      }
+    :nth-child(1) {
+      grid-area: 1 / 1 / 2 / 2;
+    }
+    :nth-child(2) {
+      grid-area: 1 / 2 / 2 / 3;
+    }
+    :nth-child(3) {
+      grid-area: 2 / 1 / 3 / 2;
+    }
+    :nth-child(4) {
+      grid-area: 2 / 2 / 3 / 3;
+    }
+    :nth-child(5) {
+      grid-area: 3 / 1 / 4 / 3;
+    }
+    :nth-child(6) {
+      grid-area: 4 / 1 / 5 / 2;
+    }
+    :nth-child(7) {
+      grid-area: 4 / 2 / 5 / 3;
     }
 
-    .time-info-percentage {
+    .progress-badge {
       display: flex;
-      flex-direction: column;
-
-      .time-info-percentage-total {
-        display: flex;
-        align-items: flex-start;
-        padding-left: 1rem;
-      }
-
-      .time-info-percentage-billable {
-        display: flex;
-        align-items: center;
-        padding-left: 1rem;
-        margin-top: 0.4rem;
-      }
+      justify-content: end;
     }
   }
 
   &::after {
-    content: '';
+    content: "";
     display: block;
     width: 0;
     height: 0;
