--- a/app/components/sy-durationpicker-day/template.hbs
+++ b/app/components/sy-durationpicker-day/template.hbs
@@ -9,6 +9,7 @@
   maxlength={{this.maxlength}}
   placeholder={{this.placeholder}}
   autocomplete="off"
+  title={{@title}}
   {{on "change" this.change}}
   {{on "keyup" this.handleKeyPress}}
   {{on "focusout" (optional @onFocusOut)}}
