--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -34,6 +34,7 @@
 @import "components/statistic-list-bar";
 @import "components/sy-calendar";
 @import "components/sy-datepicker";
+@import "components/sy-durationpicker-day";
 @import "components/progress-tooltip";
 @import "components/welcome-modal";
 
@@ -128,11 +129,25 @@ strong {
   .form-control {
     border-color: lighten($color-danger, 20%);
 
-    &:focus {
+    &:focus,
+    &:focus-within {
       border-color: lighten($color-danger, 20%);
       box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset,
         0 0 8px opacify($color-danger, 0.6);
     }
+  }
+}
+
+.form-control {
+  &:focus-within {
+    border-color: lighten($color-primary, 20%);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset,
+      0 0 8px opacify($color-primary, 0.6);
+  }
+
+  input {
+    border: none;
+    outline: none;
   }
 }
 
