--- a/app/components/sy-durationpicker/template.hbs
+++ b/app/components/sy-durationpicker/template.hbs
@@ -1,15 +1,40 @@
-<input
-  ...attributes
-  aria-label="duration picker"
-  name="duration"
-  type="text"
-  class="form-control"
-  pattern={{this.pattern}}
-  value={{this.displayValue}}
-  maxlength={{this.maxlength}}
-  placeholder={{this.placeholder}}
-  autocomplete="off"
-  {{on "change" this.change}}
-  {{on "keyup" this.handleKeyPress}}
-  {{on "focusout" (optional @onFocusOut)}}
-/>
+{{#if (has-block)}}
+  <div class="form-control extendend-durationpicker-day">
+    {{yield}}
+    <input
+      ...attributes
+      aria-label="duration picker"
+      name="duration"
+      type="text"
+      title={{@title}}
+      disabled={{@disabled}}
+      pattern={{this.pattern}}
+      value={{this.displayValue}}
+      maxlength={{this.maxlength}}
+      placeholder={{this.placeholder}}
+      autocomplete="off"
+      {{on "change" this.change}}
+      {{on "keyup" this.handleKeyPress}}
+      {{on "focusout" (optional @onFocusOut)}}
+    />
+  </div>
+{{else}}
+  <input
+    ...attributes
+    aria-label="duration picker"
+    name="duration"
+    type="text"
+    class="form-control"
+    disabled={{@disabled}}
+    pattern={{this.pattern}}
+    value={{this.displayValue}}
+    maxlength={{this.maxlength}}
+    placeholder={{this.placeholder}}
+    autocomplete="off"
+    title={{@title}}
+    {{on "change" this.change}}
+    {{on "keyup" this.handleKeyPress}}
+    {{on "focusout" (optional @onFocusOut)}}
+  />
+
+{{/if}}
