refactor(sy-checkbox): move component scss

--- a/app/components/sy-checkbox/template.hbs
+++ b/app/components/sy-checkbox/template.hbs
@@ -1,4 +1,4 @@
-<div class="checkbox" ...attributes>
+<div class="sy-checkbox checkbox" ...attributes>
   <input
     type="checkbox"
     id={{this.checkboxElementId}}
