--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,6 +35,7 @@
 @import "components/sy-calendar";
 @import "components/sy-datepicker";
 @import "components/sy-durationpicker-day";
+@import "components/sy-toggle";
 @import "components/progress-tooltip";
 @import "components/welcome-modal";
 
