--- a/app/styles/reports.scss
+++ b/app/styles/reports.scss
@@ -2,26 +2,42 @@
   white-space: nowrap;
 
   .form-list-body > .form-list-row > .form-list-cell {
-    &:nth-child(5),
-    &:nth-child(6),
-    &:nth-child(7),
-    &:nth-child(8) {
+    &.cell-duration,
+    &.cell-remaining-effort,
+    &.cell-review-billable-icons,
+    &.cell-review,
+    &.cell-buttons,
+    &.cell-not-billable {
       flex-basis: 25%;
       flex-grow: 0;
       margin: 0;
     }
 
-    &:nth-child(7) {
+    &.cell-review,
+    &.cell-review-billable-icons,
+    &.cell-remaining-effort {
       padding-left: 1rem;
     }
 
-    &:nth-child(9) {
+    &.cell-review-billable-icons {
+      display: flex;
+
+      > .sy-toggle {
+        flex: 0 0 30px;
+      }
+    }
+
+    &.cell-buttons {
       text-align: right;
       flex-grow: 1;
 
       .btn {
         display: inline-flex;
       }
+    }
+
+    &.cell-remaining-effort {
+      padding-left: 1rem;
     }
   }
 }
@@ -41,21 +57,21 @@
         width: auto;
       }
 
-      &:nth-child(5) {
+      &.cell-review-billable-icons {
+        padding-left: 0.5rem;
+      }
+
+      &.cell-duration {
         width: 75px;
       }
 
-      &:nth-child(6) {
-        width: 90px;
-      }
-
-      &:nth-child(7),
-      &:nth-child(8) {
-        width: 140px;
-      }
-
-      &:nth-child(9) {
+      &.cell-buttons {
         width: 110px;
+      }
+
+      &.cell-remaining-effort {
+        width: 140px;
+        padding-right: 50px;
       }
     }
   }
