--- a/app/components/no-permission/template.hbs
+++ b/app/components/no-permission/template.hbs
@@ -1,8 +1,9 @@
 <div>
-  {{fa-icon 'hand-paper-o'}}
+  <FaIcon @icon="hand-paper-o" />
   <h3>Halt!</h3>
   <p>
-    You are not supposed to be here...<br>
-    Please leave and do not talk about it, <strong>ever</strong>!
+    You are not supposed to be here...<br />
+    Please leave and do not talk about it,
+    <strong>ever</strong>!
   </p>
 </div>
