--- a/app/components/statistic-list/template.hbs
+++ b/app/components/statistic-list/template.hbs
@@ -6,7 +6,7 @@
   {{else if @data.last.isError}}
     <div class="empty">
       <div>
-        {{fa-icon "bolt"}}
+        <FaIcon @icon="bolt" />
         <h3>Oops... Something went wrong</h3>
         <p>
           Have you tried turning it off and on again?
@@ -18,7 +18,7 @@
   {{else if @missingParams}}
     <div class="empty">
       <div>
-        {{fa-icon "search"}}
+        <FaIcon @icon="search" />
         <h3>Missing filter parameters</h3>
         <p>{{this.missingParamsMessage}}</p>
       </div>
@@ -26,7 +26,7 @@
   {{else if (not @data.last.value)}}
     <div class="empty">
       <div>
-        {{fa-icon "bar-chart"}}
+        <FaIcon @icon="bar-chart" />
         <h3>No statistics to display</h3>
         <p>Maybe try loosening your filters</p>
       </div>
