--- a/app/users/edit/index/template.hbs
+++ b/app/users/edit/index/template.hbs
@@ -81,7 +81,7 @@
           {{else}}
             <div class="card-block empty">
               <div>
-                {{fa-icon "briefcase"}}
+                <FaIcon @icon="briefcase" />
                 <p>
                   No employments found...
                 </p>
@@ -124,7 +124,7 @@
           {{else}}
             <div class="card-block empty">
               <div>
-                {{fa-icon "calendar-times-o"}}
+                <FaIcon @icon="calendar-times" />
                 <p>
                   No absences found...
                 </p>
