--- a/app/index/activities/edit/template.hbs
+++ b/app/index/activities/edit/template.hbs
@@ -6,7 +6,7 @@
 >
   <div class="card">
     <div class="card-header hidden-lg">
-      <LinkTo @route="index.activities">{{fa-icon "chevron-left"}}</LinkTo>
+      <LinkTo @route="index.activities"><FaIcon @icon="chevron-left" /></LinkTo>
     </div>
     <div class="card-block">
       <TaskSelection
