--- a/app/projects/template.hbs
+++ b/app/projects/template.hbs
@@ -217,7 +217,7 @@
     {{else}}
       <div class="empty" data-test-none-selected>
         <div>
-          {{fa-icon "search"}}
+          <FaIcon @icon="search" />
           <h3>Please select a customer and a project</h3>
         </div>
       </div>
