--- a/app/users/edit/credits/index/template.hbs
+++ b/app/users/edit/credits/index/template.hbs
@@ -1,11 +1,18 @@
 <div class="grid grid--12of12 grid-md--6of12">
   <div class="grid-cell grid-cell-md--12of12 year-select form-inline">
     {{#if this.allowTransfer}}
-      <button type="button" class="btn" {{action (perform this.transfer) on='click'}}>Transfer</button>
+      <button
+        type="button"
+        class="btn"
+        {{action (perform this.transfer) on="click"}}
+      >Transfer</button>
     {{/if}}
 
     {{#with this.years.lastSuccessful.value as |years|}}
-      <select class="form-control" onchange={{action (mut this.year) value='target.value'}}>
+      <select
+        class="form-control"
+        onchange={{action (mut this.year) value="target.value"}}
+      >
         {{#each years as |y|}}
           <option value={{y}} selected={{eq y this.year}}>{{y}}</option>
         {{/each}}
@@ -37,8 +44,18 @@
                   </thead>
                   <tbody>
                     {{#each absenceCredit as |absenceCredit|}}
-                      <tr class="{{if (can 'edit absence-credit') 'pointer'}}" {{action (perform this.editAbsenceCredit) absenceCredit.id on='click'}}>
-                        <td>{{moment-format absenceCredit.date 'DD.MM.YYYY'}}</td>
+                      <tr
+                        class="{{if (can 'edit absence-credit') 'pointer'}}"
+                        {{action
+                          (perform this.editAbsenceCredit)
+                          absenceCredit.id
+                          on="click"
+                        }}
+                      >
+                        <td>{{moment-format
+                            absenceCredit.date
+                            "DD.MM.YYYY"
+                          }}</td>
                         <td>{{absenceCredit.days}}</td>
                         <td>{{absenceCredit.absenceType.name}}</td>
                         <td>{{absenceCredit.comment}}</td>
@@ -48,22 +65,29 @@
                 </table>
               </div>
             </div>
-            {{#if (can 'create absence-credit')}}
+            {{#if (can "create absence-credit")}}
               <div class="text-right">
-                <LinkTo @route="users.edit.credits.absence-credits.new" class="card-link">Add new credit</LinkTo>
+                <LinkTo
+                  @route="users.edit.credits.absence-credits.new"
+                  class="card-link"
+                >Add new credit</LinkTo>
               </div>
             {{/if}}
           </div>
-        {{^}}
+        {{else}}
           <div class="card-block empty">
             <div>
-              {{fa-icon 'calendar-plus-o'}}
+              <FaIcon @icon="calendar-plus" />
               <p>
-                No absence credits found...<br>
-                {{#if (can 'create absence-credit')}}
-                  Add a new credit by clicking the button below!<br>
-                  <br>
-                  <LinkTo @route="users.edit.credits.absence-credits.new" @tagName="button" class="btn btn-success">Add new credit</LinkTo>
+                No absence credits found...<br />
+                {{#if (can "create absence-credit")}}
+                  Add a new credit by clicking the button below!<br />
+                  <br />
+                  <LinkTo
+                    @route="users.edit.credits.absence-credits.new"
+                    @tagName="button"
+                    class="btn btn-success"
+                  >Add new credit</LinkTo>
                 {{/if}}
               </p>
             </div>
@@ -97,9 +121,22 @@
                   </thead>
                   <tbody>
                     {{#each overtimeCredits as |overtimeCredit|}}
-                      <tr class="{{if (can 'edit overtime-credit') 'pointer'}}" {{action (perform this.editOvertimeCredit) overtimeCredit.id on='click'}}>
-                        <td>{{moment-format overtimeCredit.date 'DD.MM.YYYY'}}</td>
-                        <td>{{humanize-duration overtimeCredit.duration false}}</td>
+                      <tr
+                        class="{{if (can 'edit overtime-credit') 'pointer'}}"
+                        {{action
+                          (perform this.editOvertimeCredit)
+                          overtimeCredit.id
+                          on="click"
+                        }}
+                      >
+                        <td>{{moment-format
+                            overtimeCredit.date
+                            "DD.MM.YYYY"
+                          }}</td>
+                        <td>{{humanize-duration
+                            overtimeCredit.duration
+                            false
+                          }}</td>
                         <td>{{overtimeCredit.comment}}</td>
                       </tr>
                     {{/each}}
@@ -107,22 +144,29 @@
                 </table>
               </div>
             </div>
-            {{#if (can 'create overtime-credit')}}
+            {{#if (can "create overtime-credit")}}
               <div class="text-right">
-                <LinkTo @route="users.edit.credits.overtime-credits.new" class="card-link">Add new credit</LinkTo>
+                <LinkTo
+                  @route="users.edit.credits.overtime-credits.new"
+                  class="card-link"
+                >Add new credit</LinkTo>
               </div>
             {{/if}}
           </div>
-        {{^}}
+        {{else}}
           <div class="card-block empty">
             <div>
-              {{fa-icon 'clock-o'}}
+              <FaIcon @icon="clock" />
               <p>
-                No overtime credits found...<br>
-                {{#if (can 'create overtime-credit')}}
-                  Add a new credit by clicking the button below!<br>
-                  <br>
-                  <LinkTo @route="users.edit.credits.overtime-credits.new" @tagName="button" class="btn btn-success">Add new credit</LinkTo>
+                No overtime credits found...<br />
+                {{#if (can "create overtime-credit")}}
+                  Add a new credit by clicking the button below!<br />
+                  <br />
+                  <LinkTo
+                    @route="users.edit.credits.overtime-credits.new"
+                    @tagName="button"
+                    class="btn btn-success"
+                  >Add new credit</LinkTo>
                 {{/if}}
               </p>
             </div>
