--- a/app/users/index/template.hbs
+++ b/app/users/index/template.hbs
@@ -49,7 +49,7 @@
   {{#if (eq section "empty")}}
     <div class="empty">
       <div>
-        {{fa-icon "users"}}
+        <FaIcon @icon="users" />
         <h3>No users to display</h3>
         <p>Maybe try loosening your filters</p>
       </div>
