--- a/app/styles/components/sy-toggle.scss
+++ b/app/styles/components/sy-toggle.scss
@@ -2,11 +2,11 @@
   cursor: pointer;
   margin: auto;
 
-  .active {
+  &.active {
     color: $color-primary;
   }
 
-  .inactive {
+  &.inactive {
     color: $color-secondary;
   }
 }
