--- a/app/components/sy-topnav/template.hbs
+++ b/app/components/sy-topnav/template.hbs
@@ -21,7 +21,7 @@
     <ul class="nav-top-list">
       <li class="nav-top-list-item">
         <LinkTo @route="index">
-          <FaIcon @icon="clock-o" />
+          <FaIcon @icon="clock" />
           Tracking
         </LinkTo>
       </li>
