--- a/app/components/statistic-list/bar/template.hbs
+++ b/app/components/statistic-list/bar/template.hbs
@@ -1,5 +1,21 @@
-<div
-  ...attributes
-  class="statistic-list-bar"
-  {{style --value=(concat @value)}}
-></div>
+<div class="statistic-list-bar-wrapper">
+
+  <div
+    ...attributes
+    class="statistic-list-bar"
+    {{style --value=(concat @value)}}
+  ></div>
+  {{#if @remaining}}
+    <div
+      ...attributes
+      class="statistic-list-bar remaining
+        {{if (gt @remaining @goal) 'danger' 'success'}}"
+      {{style --value=(concat @remaining)}}
+    ></div>
+    <div
+      ...attributes
+      class="statistic-list-bar-goal"
+      {{style --goal=(concat @goal)}}
+    ></div>
+  {{/if}}
+</div>
