--- a/app/styles/components/statistic-list-bar.scss
+++ b/app/styles/components/statistic-list-bar.scss
@@ -1,28 +1,71 @@
-.statistic-list-bar {
-  width: 100%;
+.statistic-list-bar-wrapper {
   height: 20px;
-  overflow: hidden;
 
-  --value: 0;
-
-  &::before {
-    content: "";
-    display: block;
-    height: 100%;
+  .statistic-list-bar {
     width: 100%;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    background-color: $color-primary;
+    height: 20px;
+    position: relative;
+    overflow: hidden;
+    z-index: 3;
 
-    transform: translateX(calc((1 - var(--value)) * -100%));
+    --value: 0;
 
-    transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1);
-    animation: slide-in-statistic-bar 0.5s cubic-bezier(0.86, 0, 0.07, 1);
+    &::before {
+      content: "";
+      display: block;
+      height: 100%;
+      width: 100%;
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+      background-color: $color-primary;
+
+      transform: translateX(calc((1 - var(--value)) * -100%));
+
+      transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1);
+      animation: slide-in-statistic-bar 0.5s cubic-bezier(0.86, 0, 0.07, 1);
+    }
+
+    &.success::before {
+      background-color: $color-success-lighter;
+    }
+
+    &.danger::before {
+      background-color: $color-danger-lighter;
+    }
+
+    &.remaining {
+      top: -20px;
+      z-index: 2;
+    }
   }
-}
 
-@keyframes slide-in-statistic-bar {
-  0% {
-    transform: translateX(-100%);
+  .statistic-list-bar-goal {
+    position: relative;
+    top: -45px;
+    height: 30px;
+    width: 100%;
+    overflow: hidden;
+
+    --goal: 0;
+
+    &::before {
+      content: "";
+      display: block;
+      height: 100%;
+      width: 100%;
+      background-color: transparent;
+      border-left: 2px dotted $color-danger-darker;
+
+      transform: translateX(calc(var(--goal) * 100%));
+
+      transition: transform 0.5s cubic-bezier(0.86, 0, 0.07, 1);
+      animation: slide-in-statistic-bar 0.5s cubic-bezier(0.86, 0, 0.07, 1);
+    }
+  }
+
+  @keyframes slide-in-statistic-bar {
+    0% {
+      transform: translateX(-100%);
+    }
   }
 }
